--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -19,13 +21,24 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
+
+        <meta-data
+            android:name="android.app.default_searchable"
+            android:value=".MainPage" />
         <activity
-            android:name=".MainPage"
-            android:exported="false">
+            android:name=".SearchActivity"
+            android:launchMode="singleTop"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH"/>
+                <action android:name="android.intent.action.VIEW"/>
+            </intent-filter>
             <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
+                android:name="android.app.searchable"
+                android:value="@xml/searchable" />
         </activity>
+
         <activity
             android:name=".Login"
             android:exported="true">
